test/errors/arc/destructor_weak_manual_fail.hy
// manual destructor on weak smart pointer should be rejected

class Manual
{
    Manual() {}
    ~Manual() {}
}

int main()
{
    weak<Manual> ref = weak<Manual>()
    ref.~Manual()
    return 0
}